# app/Http/Controllers/User.php
@@ -5,45 +5,14 @@ use Illuminate\Http\Request;
 use App\Services as Services;
 class User extends Controller
 {
-    private $channelService;
-//    public function __construct(Services\Auth $ServicesChannel)
-//    {
-//        $this->channelService = $ServicesChannel;
-//    }
-    /**
-     * @OA\Post(
-     *     path="/User/login",
-     *     tags={"用户"},
-     *     summary="登陆",
-     *     description="用户登陆接口.",
-     *     operationId="createUser",
-     *     @OA\RequestBody(
-     *         description="Input data format",
-     *         @OA\MediaType(
-     *             mediaType="application/x-www-form-urlencoded",
-     *             @OA\Schema(
-     *                 type="object",
-     *                 @OA\Property(
-     *                     property="loginName",
-     *                     description="登录名",
-     *                     type="string",
-     *                 ),
-     *                 @OA\Property(
-     *                     property="password",
-     *                     description="登陆密码",
-     *                     type="password"
-     *                 )
-     *             )
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response="default",
-     *         description="successful operation"
-     *     ),
-     * )
-     */
+    private $authService;
+    public function __construct(Services\Auth $authService)
+    {
+        $this->authService = $authService;
+    }
     public function login(){
-        echo 'login';
+        $params = $this->getParams();
+        $this->authService->userLogin($params['loginName'],$params['password']);
 //        $params = $request->all();
 //        $channel_id = $params['channel_id'];
 //        $user = $this->getLoginUser();
